--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -47,7 +47,7 @@
 
           <a href="#menu8" id="collapse8" class="list-group-item collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><i class="fa fa-exclamation-circle"></i>   <span class="hidden-sm-down">Issues</span> <i class="fa fa-angle-right" aria-hidden="true"></i></a>
       <div class="collapse" id="menu8">
-       <%=link_to "Issues Audit Report", issues_index_path,class: "list-group-item load"%>
+       <%=link_to "Issues Audit Report", claim_issues_path,class: "list-group-item load"%>
       <!--  <!%=link_to "Approved Issue Report", issues_approved_claims_path,class: "list-group-item load"%> -->
       </div>
 
