--- a/app/views/claim_issues/index.html.erb
+++ b/app/views/claim_issues/index.html.erb
@@ -1,23 +1,273 @@
-<p id="notice"><%= notice %></p>
+<head>
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css"/>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
 
-<h1>Claim Issues</h1>
+</head>
+<section>
+  <div class="container-fluid issue-report">
+    <header>
+      <ol class="breadcrumb">
+        <%= render_breadcrumbs :tag => :li, :separator => "" %>
+      </ol>
+      <h3>Issues<span class="float-right">
+        <a href="claim_issues/new" class="btn_add load" data-target="#exampleModalLabel"><i class="fa fa-plus" aria-hidden="true"></i></a>
+        </span>
+      </h3>
+    </header>
+     <%=form_for "filter",:url=>{:controller=>"issues",:action=>"datewisefilter"}  do |i|%>
+      <div class="date-search">
+      <div class="row">
+          <div class="col-md-2">
+              <label>From Date</label>
+              <br>
+              <input name="from_date" type="text" id="dt1" class="form-control datepicker" value="<%=@from_date%>" placeholder="dd-M-yy">
+          </div>
+          <div class="col-md-2">
+              <label>To Date</label>
+              <br>
+              <input name="to_date" type="text" id="dt2" class="form-control datepicker" value="<%=@to_date%>" placeholder="dd-M-yy">
+          </div>
+          <div class="col-md-2">
+              <label>Issue Status</label>
+              <br>
+              <select class="form-control filter" name="status">
+                  <option value="" selected>Select</option>
+                  <option value="Open" <% if @status=="Open" %> selected
+                      <%end%>>Open</option>
+                  <option value="Closed" <% if @status=="Closed" %> selected
+                      <%end%>>Closed</option>
+                  <option value="Re-open" <% if @status=="Re-open" %> selected
+                      <%end%>>Re-open</option>
+                  <option value="Approved" <% if @status=="Approved" %> selected
+                      <%end%>>Approved</option>
+              </select>
+          </div>
+          <div class="col-md-2">
+              <label>Assigned To</label>
+              <br>
+              <%= select_tag "user_id", options_for_select((@users || []).map { |obj| [obj['user_name'], obj['id']] }, @user_id), class: "fold1 s1 form-control", autofocus: true, prompt: "select" %>
+          </div>
+          <div class="col-md-2">
+              <label class="form-control-label" for="formGroupExampleInput">Select Supplier</label>
+              <%= select_tag "supplier_id", options_for_select((@suppliers || []).map { |obj| [obj['supplier_name'], obj['id']] }, @supplier_id), class: "fold1 s1 form-control", autofocus: true, prompt: "select" %>
+          </div>
+          <div class="col-md-2">
+              <div id="CarsDivision" class="desc">
+                  <label class="form-control-label" for="formGroupExampleInput">Select Division</label>
+                  <%= select_tag "division_id", options_for_select((@divisions || []).map { |obj| [obj['div_name'], obj['id']] }, @division_id), class: "fold1 divi  form-control", autofocus: true, prompt: "select" %>
+              </div>
+          </div>
+          <div class="col-md-2">
+              <label>&nbsp;</label>
+              <br>
+              <%=i.submit "Show", class: "btn btn-full btn-primary"%>
+          </div>
+      </div>
+      </div>
+    <%end%>
 
-<table>
-  <thead>
-    <tr>
-      <th>ID</th>
-    </tr>
-  </thead>
+      <h3>Issues Audit Report</h3>           
+      </header>
+        <%=form_for "issue_update",:url=>{:controller=>"issues",:action=>"issue_update"} do |j|%>
+          <div class="display status">
+            <table id="example">
+               <thead>
+                <tr>
+                  <th>Title</th>
+                  <th>Divison</th>
+                  <th class="text-center">Cut-off Date </th>                  
+                  <th>Resolved By</th>
+                  <th class="text-center">Created Date</th>
+                  <th>Notes</th>
+                  <th>Status</th>
+                  <th>Assigned To</th> 
+                  <th>Action</th> 
+                </tr>
+              </thead>
+              <tbody>
+                  <%if @claim_issues.present?%>
+                  <%@claim_issues.try(:map) do |i|%>
+                  <tr>
+                      <%=hidden_field_tag "ids[]" ,i["id"] %>
+                      <td>
+                          <span style="width: 200px;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;" title="<%=i[" description"]%>">
+                              <%= i["description"] %></span>
+                      </td>
+                      <%#= puts i["appointment"] %>
+                      <td>
+                          <%=i["division"].present? ? i["division"]["div_name"] : "no app contact" %>
+                      </td>
+                      <td class="text-center" data-order="<%=i["cut_off_date"]&.to_date&.strftime("%Y-%m-%d") if i["cut_off_date"].present? %>">
+                          <%=i["cut_off_date"].to_date.strftime("%d-%m-%Y") unless i["cut_off_date"].nil? %>
+                      </td>
+                      <td>
+                          <%=i["contact"]["name"]%>
+                      </td>
+                      <td class="text-center">
+                          <%=i["created_at"].to_date.strftime('%d-%m-%Y') unless i["created_at"].nil?%>
+                      </td>
+                      <td>
+                          <%#= i["notes"]%>
+                          <div>
+                              <% if i["notes"]&.length.to_i > 50 %>
+                              <% notes = i["notes"] %>
+                              <%= truncate(notes, length: 50) %>
+                              <%= link_to_function '...Read more', "$(this).parent().html('#{escape_javascript notes}')" %>
+                              <% else %>
+                              <%= notes %>
+                              <% end %>
+                          </div>
+                      </td>
+                      <td class="td_issue_status">
+                          <%= select_tag "status[]", options_for_select([['Open'],['Closed'],['Re-open']],:selected=>i["status"]),  class: "form-control", include_blank: "Select"%>
+                      </td>
+                     <!--  <td>
+                        <%#=i["user"].present? ? i["user"]["user_name"] : "no user" %>
+                      </td> -->
+                      <td class="td_issue_status">
+                        <%= select_tag "users[]", options_for_select((@users || []).map { |obj| [obj['user_name'], obj['id']] }, i["user_id"]),  class: "form-control", include_blank: "Select"%>
+                      </td>
+                       <%if @user["role"]=="Admin"%>
+                        <td><%= link_to '', "/claim_issues/#{i['id']}", method: :delete, data: { confirm: 'Are you sure?' }, class: "fa fa-trash-o icon_clr load float-right" %></td><%end%>
+                  </tr>
+                  <%end%>
+              </tbody>
+            </table>         
 
-  <tbody>
-    <% @claim_issues.each do |claim_issue| %>
-      <tr>
-        <td><%= claim_issue["id"] %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          </div>
+            <footer class="table-footer">
+          <%=j.submit "Save" , class: "btn btn-one load", id: "sopissue1"%>
+          <%=link_to "Cancel", pages_dashboard_path , class: "btn btn-primary load", id: "sopissue2"%>
+          </footer>
+          <%end%>
+</div>
+          
+        <%end%>
+             
+</section>
 
-<br>
 
-<%= link_to 'New Claim Issue', new_claim_issue_path %>
+<script type="text/javascript">
+  $(document).ready(function(){ 
+    $("#dt1").each(function(ev)
+    {
+        if(!$(this).val()) { 
+       $(this).attr("placeholder", "dd-mm-yy");
+    }
+    });
+    $("#dt2").each(function(ev)
+    {
+        if(!$(this).val()) { 
+       $(this).attr("placeholder", "dd-mm-yy");
+    }
+    });    
+  });  
+
+
+</script>
+
+
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $("input[type='search']").focus();
+  });
+
+  $(document).ready(function(){ 
+    $("input[type=search]").each(function(ev)
+    {
+        if(!$(this).val()) { 
+       $(this).attr("placeholder", "Search");
+    }
+    });
+  });
+</script>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $(".fold1").change(function(){
+     $(".overlay").show();
+      var id=($(this).val());
+      var value=($(this).attr("id"));
+       $.ajax({
+          url: '/appointments/fetch_manufacturer',
+          data: {format: id, type: value},
+          dataType: 'script',
+           
+          success: function(data) {
+
+              // setTimeout added to show loading
+              setTimeout(function () {
+  $(".overlay").hide();                              
+              });
+          }
+      });
+  });
+         
+  });
+</script>
+  <link rel="stylesheet" href="/assets/datatable.css">
+  <link rel="stylesheet" href="/assets/datatablebutton.css">
+  <script src="/assets/datatablejquery.js"></script>
+  <script src="/assets/datatablejquery1.js"></script>
+  <script src="/assets/datatablebuttons.js"></script>
+  <script src="/assets/datatablejszip.js"></script>
+  <script src="/assets/datatablepdf.js"></script>
+  <script src="/assets/datatablefont.js"></script>
+  <script src="/assets/datatablehtml.js"></script>
+  <script src="/assets/datatableprint.js"></script>
+
+
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+      $('#example').DataTable( {
+          dom: 'Bfrtip',
+          bSort:true,
+          "pageLength": 13,
+         buttons: [              
+              {
+                extend: 'excelHtml5',
+                exportOptions: {
+                 columns: [ 0, 1, 2,3,4,5]
+                }
+              },
+              {
+                extend: 'pdfHtml5',
+                exportOptions: {
+                 columns: [ 0, 1, 2,3,4,5 ]
+                }
+              },
+              {
+                extend: 'print',
+                exportOptions: {
+                 columns: [ 0, 1, 2,3,4,5]
+                }
+              }
+          ],
+             "order": [[ 2, "asc" ]]
+          } );
+  } );
+
+  </script>
+
+
+
+
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $("input[type=search]").focus();
+  });
+
+  $(document).ready(function(){
+    $("input[type=search]").each(function(ev)
+    {
+        if(!$(this).val()) { 
+       $(this).attr("placeholder", "Search");
+    }
+    });
+  });
+</script>
