Claims make stable

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -14,7 +14,7 @@
       </ol>
       <h3>Appointments<span class="float-right">
         <a href="appointments/new" class="btn_add load" data-target="#exampleModalLabel"><i class="fa fa-plus" aria-hidden="true"></i></a>
-        <%= link_to 'MissedList',appointments_pending_appointment_path, class: "btn btn_pad btn-link"%>
+        <%#= link_to 'MissedList',appointments_pending_appointment_path, class: "btn btn_pad btn-link"%>
         </span>
       </h3>
     </header>
