--- a/app/views/claims/expiry_damage_claim.html.erb
+++ b/app/views/claims/expiry_damage_claim.html.erb
@@ -7,19 +7,19 @@
         <header>
 
             <h3>Expiry / Broken
-                    <%if params["data"].present?%>
+                   <!--  <%#if params["data"].present?%>
                     <a href="/sendmails/expiry_damage_claims" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
               
-                    <%elsif params["id"]=="pendingreport"%>
+                    <%#elsif params["id"]=="pendingreport"%>
                     
                       <a href="/sendmails/pending_claims_report" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
-                    <%elsif params["id"]=="settledreport"%>
+                    <%#elsif params["id"]=="settledreport"%>
                     <a href="/sendmails/settled_claims_report" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
 
-                      <%else%>
+                      <%#else%>
                         <a href="/sendmails/sendmails_claims_broken_damage" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
 
-                    <%end%>
+                    <%#end%> -->
                    <!--  <span class="float-right">           
                       <input placeholder="Search" class="" id="system-search" name="q" type="text">
                     </span>   -->
