--- a/app/views/claims/free_discounts_claim.html.erb
+++ b/app/views/claims/free_discounts_claim.html.erb
@@ -9,20 +9,20 @@
           <header>
                 
             <h3>Free and Discounts
-            <%if params["id"]=="report"%>
+            <!-- <%#if params["id"]=="report"%>
             <a href="/sendmails/free_discount_claims" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
              
-            <%elsif params["id"]=="pendingreport"%>
+            <%#elsif params["id"]=="pendingreport"%>
             <a href="/sendmails/pending_claims_report" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
-            <%elsif params["id"]=="settledreport"%>
+            <%#elsif params["id"]=="settledreport"%>
             <a href="/sendmails/settled_claims_report" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
             
             
-            <%else%>
+            <%#else%>
 
               <a href="/sendmails/sendmails_claims_discount" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
-              <%end%>
-             <!-- <span class="float-right">           
+              <%#end%>
+ -->             <!-- <span class="float-right">           
               <input placeholder="Search" class="" id="system-search" name="q" type="text">
              </span>  
             --> </h3>
