--- a/app/views/claims/purchase_return_claim.html.erb
+++ b/app/views/claims/purchase_return_claim.html.erb
@@ -8,21 +8,21 @@
         <div class="container-fluid user-assign">
           <header>
             <h3>Purchase Returns
-            <%if params["id"]=="report"%>
-            <a href="/sendmails/settled_claims_report" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
+            <%#if params["id"]=="report"%>
+            <!-- <a href="/sendmails/settled_claims_report" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
             
-            <%elsif params["id"]=="pendingreport"%>
+            <%#elsif params["id"]=="pendingreport"%>
             <a href="/sendmails/pending_claims_report" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
-            <%elsif params["id"]=="settledreport"%>
+            <%#elsif params["id"]=="settledreport"%>
             <a href="/sendmails/settled_claims_report" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
             
              
-            <%elsif params["data"]=="return" %>
+            <%#elsif params["data"]=="return" %>
               <a href="/sendmails/purchase_return_claims" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
           
-            <%else%>
+            <%#else%>
              <a href="/sendmails/sendmails_claims_purchase_return" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
-             <%end%>
+             <%#end%> -->
             <!--  <span class="float-right">           
               <input placeholder="Search" class="" id="system-search" name="q" type="text">
              </span>  
