--- a/app/views/claims/rate_change_claim.html.erb
+++ b/app/views/claims/rate_change_claim.html.erb
@@ -8,16 +8,16 @@
         <div class="container-fluid user-assign">
           <header>
               <h3>Rate Change
-                  <%if params["data"].present?%>
+                <!--   <%#if params["data"].present?%>
                     <a href="/sendmails/rate_change_claims" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>              
-                  <%elsif params["id"]=="pendingreport"%>
+                  <%#elsif params["id"]=="pendingreport"%>
                   <a href="/sendmails/pending_claims_report" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>              
-                 <%elsif params["id"]=="settledreport"%>
+                 <%#elsif params["id"]=="settledreport"%>
                     <a href="/sendmails/settled_claims_report" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
             
-                 <%else%>
+                 <%#else%>
                     <a href="/sendmails/sendmails_claims_rate_change" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>              
-                  <%end%>
+                  <%#end%> -->
                  <!--  <span class="float-right">         
                     <input placeholder="Search" class="" id="system-search" name="q" type="text" autofocus>
                   </span> -->
