--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
 
                         <%issue_alert.each do|i|%>
                             <li>
-                              <%=link_to appointment_path(i["appointment_id"]) do %>
+                              <%#=link_to appointment_path(i["appointment_id"]) do %>
                               <div>
                                 <h5><!-- <span style="width: 200px;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;" title="<!%=i["description"]%>">
    -->                           <%=i["description"]%>
@@ -32,7 +32,7 @@
                                 </h5>                              
                                 <!-- <h5>Arun, RSM<span><p>JOHNSON&JOHNSON MAXIM</p></span></h5> -->
                               </div>
-                            <%end%>
+                            <%#end%>
                           </li>
                            <%end%>
                          <!--  <li>
