--- a/app/views/sendmails/pogr_details.html.erb
+++ b/app/views/sendmails/pogr_details.html.erb
@@ -14,7 +14,7 @@
 
   <div class="container-fluid">
     <header>
-      <h3>PO-GR Mismatch <span class="float-right"><a href="/sendmails/pogr_mismatch" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
+      <!-- <h3>PO-GR Mismatch <span class="float-right"><a href="/sendmails/pogr_mismatch" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a> -->
       <!-- <input type="text" name="daterange" id="date" /> -->
       <input placeholder="Search" id="system-search" class="" type="text"> </span></h3>
     </header>
