--- a/app/views/claims/pending_claims.html.erb
+++ b/app/views/claims/pending_claims.html.erb
@@ -56,7 +56,7 @@
 	    </div>
 	  </div>
 	</div>
-	 <a href="/pages/dashboard" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
+	 <!-- <a href="/pages/dashboard" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a> -->
 	<div class="container-fluid">
 	  <nav aria-label="Page navigation example" id="page_slider">
 	    <h1>
