--- a/app/views/sendmails/expiry_claim_preview.html.erb
+++ b/app/views/sendmails/expiry_claim_preview.html.erb
@@ -11,7 +11,7 @@
 <section class="users_admin">
   <div class="container-fluid">
 
-      <a href="/sendmails/expiry_damage_claims?supplier_id=<%=params["supplier_id"] if params["supplier_id"].present?%>" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
+      <!-- <a href="/sendmails/expiry_damage_claims?supplier_id=<%=params["supplier_id"] if params["supplier_id"].present?%>" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a> -->
 
       <header>
           <ol class="breadcrumb">
