--- a/app/views/sendmails/free_claim_preview.html.erb
+++ b/app/views/sendmails/free_claim_preview.html.erb
@@ -1,6 +1,6 @@
 <section class="users_admin">
         <div class="container-fluid">
-        <a href="/sendmails/free_discount_claims" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
+        <!-- <a href="/sendmails/free_discount_claims" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a> -->
           <header>
              <ol class="breadcrumb">
                 <li><%=link_to "Free Discount Claims", sendmails_free_discount_claims_path,class: " load"%></li>
