--- a/app/views/sendmails/order_details.html.erb
+++ b/app/views/sendmails/order_details.html.erb
@@ -15,12 +15,12 @@
   <div class="container-fluid">
     <header>
       <h3>Purchase Order <span class="float-right">
-      <%if params["data"].present?%>
+     <!--  <%#if params["data"].present?%>
       <a href="/sendmails/purchase_order_report" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
       
-      <%else%>
+      <%#else%>
       <a href="/sendmails/sendmail_purchase_order_page" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
-      <%end%>
+      <%#end%> -->
       <!-- <input type="text" name="daterange" id="date" /> -->
       <input placeholder="Search" id="system-search" class="" type="text"> </span></h3>
     </header>
