--- a/app/views/sendmails/rate_claim_preview.html.erb
+++ b/app/views/sendmails/rate_claim_preview.html.erb
@@ -1,7 +1,7 @@
       <section class="users_admin">
         <div class="container-fluid">
          <div class="container-fluid">
-        <a href="/sendmails/rate_change_claims" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a>
+        <!-- <a href="/sendmails/rate_change_claims" class="btn btn-link float-right"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a> -->
           <header>
           <ol class="breadcrumb">
              <li><%=link_to "Rate Change Claims", sendmails_rate_change_claims_path,class: " load"%></li>
